train for 4 epochs

--- a/sky-training.yaml
+++ b/sky-training.yaml
@@ -13,6 +13,7 @@ setup: |
   pip install --upgrade pip
   pip install -r requirements.txt
 run: |
+  dvc pull dvclive/artifacts
   dvc exp run --pull
   dvc exp push origin
   
